2005-11-07  Gautier Portet <kassoulet gmail com>

	* fixed broken folder dropping. (#5561)

2005-11-06 Gautier Portet <kassoulet gmail com>
	* drag and drop is now able to import a folder.
	* better display of example filename in preferences.
	* gnomevfs support.
	  #1365
	* add a temporary hack for abr/vbr mp3 with quality==9
	  #5445
	* release 0.8.1
	

2005-11-02 Gautier Portet <kassoulet gmail com>
	* fixed tree structure being lost when importing folders.
	  #5336

2005-10-25 Gautier Portet <kassoulet gmail com>
	* added brazilian translation.
	  (thanks jonh)
	* woops, really added polish translation this time.

2005-10-18 Gautier Portet <kassoulet gmail com>
	* applied patch for polish tranlation
	  (thanks Dominik)

2005-10-09 Gautier Portet <kassoulet gmail com>
	* added an option to apply to all queue the option choose
	  when overwriting.
	  #1341

2005-09-28 Gautier Portet <kassoulet gmail com>
	* applied patch from Elias for Gentoo

2005-09-20 ???  Gautier Portet <kassoulet gmail com>
	* added a display of the approximate bitrate of the output
	* fixed output format not always displayed updated
	  #4736 (thanks Janis)	
	* at least a correct handling of the absence of gstreamer-lame
	* fixed a crash whith some output folders folders
	  #3840 (thanks Jason)
	* added a button to add a folder recursively
	* fixed a crash when loading preferences
	  #5128 (thanks Joe)



2005-06-13  Gautier Portet <kassoulet gmail com>
	* added french tranlation. 
	  (thanks Guillaume Bedot <littletux@zarb.org>)
	* fixed a bug causing ogg tags to be ignored.
	  (thanks Noa Resare <noa@resare.com>)

2005-04-15  Gautier Portet <kassoulet gmail com>

	* reverted quality setting to 'real-world' quantities
	  -> values stored in gconf are now the values passed
       	  to gstreamer and not meaningless enums.
       	* added a label showing an aproximate bitrate in the
          preference window


2005-03-24  Gautier Portet <kassoulet gmail com>
